release: 发布1.0.4版本